fix(NotConnectedHome, augmint-ui/container): change margins, paddings, text alignments

--- a/src/containers/home/NotConnectedHome/styles.css
+++ b/src/containers/home/NotConnectedHome/styles.css
@@ -64,6 +64,7 @@ p {
 .grid .home-image img {
     max-height: 120px;
     min-height: 120px;
+    margin-bottom: 40px;
 }
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
@@ -91,7 +92,7 @@ p {
 }
 
 .grid .column {
-    padding: 1rem;
+    padding: 2rem 1rem;
 }
 
 .team .grid .column > img,
@@ -102,7 +103,7 @@ p {
     float: left;
     width: 120px;
     height: 120px;
-    margin-bottom: 70px;
+    margin-bottom: 140px;
     margin-right: 30px;
 }
 
@@ -130,10 +131,10 @@ p {
     font-weight: 400;
 }
 
-@media (max-width: 767px) and (min-width: 320px) {
+@media (max-width: 768px) and (min-width: 320px) {
     .team .grid .column > img,
     .partner .grid .column > img {
-        margin-bottom: 15px;
+        margin-bottom: 10px;
     }
 
     .team .grid .column h3 {
@@ -142,23 +143,24 @@ p {
 
     .team .grid .column p.description,
     .partner .grid .column p.description {
-        margin-top: 25px;
+        margin-top: 45px;
     }
 }
 
-@media (min-width: 768px) and (max-width: 1455px) {
+@media (min-width: 769px) and (max-width: 1455px) {
     .segment.how-to-use,
     .segment.team {
         padding-left: 190px;
     }
+    .segment.advantages,
     .segment.team,
     .segment.partner {
-        padding-left: 85px;
+        padding: 0px 85px;
     }
 }
 
 .segment.how-to-use .grid.margin {
-    margin-bottom: 100px;
+    margin-bottom: 140px;
 }
 
 .segment.how-to-use h5.ui.header,
